--- a/css/main.css
+++ b/css/main.css
@@ -335,82 +335,6 @@ textarea {
   font-style: normal; }
 
 /***** Pattern *****/
-.cursor-pointer {
-  cursor: pointer; }
-
-.cursor-text {
-  cursor: text; }
-
-.inline-block {
-  display: inline-block; }
-
-.display-block {
-  display: block; }
-
-.display-none {
-  display: none; }
-
-.flex {
-  display: flex; }
-
-.flex-wrap {
-  display: flex;
-  flex-wrap: wrap; }
-
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center; }
-
-.flex-around {
-  display: flex;
-  justify-content: space-around; }
-
-.flex-between {
-  display: flex;
-  justify-content: space-between; }
-
-.flex-wrap-between {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
-
-.flex-wrap-center {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.flex-start-center {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center; }
-
-.flex-between-center {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-.flex-col-top-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center; }
-
-.color-green {
-  color: #50B520; }
-
-.bg-green {
-  color: #50B520; }
-
-.bold {
-  font-weight: bold;
-  font-family: Gilroy; }
-
-.center {
-  text-align: center; }
-
-/***** Box-sizing *****/
 html {
   box-sizing: border-box; }
 
@@ -426,30 +350,138 @@ body {
 *, *::before, *::after {
   box-sizing: inherit; }
 
-main {
+.wrapper {
   margin: 0 auto;
+  padding: 34px 126px 76px;
   max-width: 1200px;
   background-color: #fff; }
-
-.header {
-  font-size: 36px; }
-
-.nav .nav-item {
-  background-color: #f5f3e8; }
-  .nav .nav-item:not(:last-child) {
-    margin-right: 10px; }
-
-section .card {
-  margin-bottom: 43px;
-  border: none; }
-  section .card .card-body {
-    padding: 14px 0 0; }
-    section .card .card-body .card-text {
+  .wrapper .header {
+    font-size: 36px;
+    line-height: 38px;
+    margin-bottom: 19px;
+    text-align: center; }
+  .wrapper .dotted {
+    border-bottom: 1px dotted black; }
+  .wrapper .nav__container {
+    margin-bottom: 16px; }
+    .wrapper .nav__container .nav .nav-item {
+      width: 148px;
+      height: 47px;
+      background-color: #f5f3e8;
       font-family: HelveticaNeueLight;
-      font-size: 15px; }
+      font-size: 18px;
+      line-height: 20px;
+      margin: 5px; }
+      .wrapper .nav__container .nav .nav-item.active {
+        background-color: #8fb52c; }
+      .wrapper .nav__container .nav .nav-item .nav-link {
+        width: 100%;
+        height: 100%;
+        color: #77716a; }
+      .wrapper .nav__container .nav .nav-item .nav-link:hover {
+        background-color: #8fb52c;
+        opacity: 0.5;
+        color: #fff; }
+      .wrapper .nav__container .nav .nav-item .nav-link:active {
+        background-color: #8fb52c;
+        color: #fff; }
+  .wrapper .container {
+    padding: 0; }
+    .wrapper .container.display-none {
+      display: none; }
+    .wrapper .container .col {
+      padding: 0 10px; }
+      .wrapper .container .col .card-link {
+        cursor: pointer; }
+        .wrapper .container .col .card-link:hover .title, .wrapper .container .col .card-link:hover .subtitle {
+          color: #5b84f0; }
+        .wrapper .container .col .card-link:hover .dotted {
+          border-bottom: 1px dotted #5b84f0 !important; }
+        .wrapper .container .col .card-link .card {
+          width: 300px;
+          margin-bottom: 43px;
+          border: none; }
+          .wrapper .container .col .card-link .card .card-body {
+            padding: 14px 0 0; }
+            .wrapper .container .col .card-link .card .card-body .title-small {
+              font-size: 15px;
+              line-height: 17px;
+              font-family: HelveticaNeueLight; }
+            .wrapper .container .col .card-link .card .card-body .title {
+              font-size: 30px;
+              line-height: 32px;
+              text-transform: uppercase; }
+            .wrapper .container .col .card-link .card .card-body .subtitle {
+              font-size: 20px;
+              line-height: 22px;
+              underline: 1px dotted black; }
+            .wrapper .container .col .card-link .card .card-body .logo {
+              width: 70px;
+              height: 23px;
+              padding: 0;
+              margin: 11px 0; }
+            .wrapper .container .col .card-link .card .card-body .card-text {
+              font-family: HelveticaNeueLight;
+              font-size: 15px; }
 
-@media (max-width: 970px) {
-  main {
-    padding: 19px 10px; } }
+@media (max-width: 1200px) {
+  .wrapper .container .col .card-link .card {
+    width: 230px; } }
+
+@media (max-width: 992px) {
+  .wrapper {
+    padding: 20px 30px; }
+    .wrapper .container .col .card-link .card {
+      width: 170px; } }
+
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 15px 25px; }
+    .wrapper .header {
+      font-size: 25px;
+      line-height: 27px;
+      margin-bottom: 12px; }
+    .wrapper .nav__container .nav .nav-item {
+      width: 120px;
+      height: 37px; }
+      .wrapper .nav__container .nav .nav-item .nav-link {
+        font-size: 15px;
+        line-height: 17px; }
+    .wrapper .container .col .card-link .card .card-body .title {
+      font-size: 25px;
+      line-height: 27px; }
+    .wrapper .container .col .card-link .card .card-body .subtitle {
+      font-size: 18px;
+      line-height: 20px; } }
+
+@media (max-width: 576px) {
+  .wrapper {
+    padding: 10px 20px; }
+    .wrapper .header {
+      font-size: 22px;
+      line-height: 24px;
+      margin-bottom: 10px; }
+    .wrapper .nav__container .nav .nav-item {
+      width: 100px;
+      height: 35px; }
+      .wrapper .nav__container .nav .nav-item .nav-link {
+        font-size: 12px;
+        line-height: 14px; }
+    .wrapper .container .col {
+      min-width: 100%;
+      justify-content: center; }
+      .wrapper .container .col .card-link {
+        display: flex;
+        justify-content: center; }
+        .wrapper .container .col .card-link .card {
+          width: 100%;
+          text-align: center; }
+          .wrapper .container .col .card-link .card img {
+            max-width: 300px;
+            align-self: center; }
+          .wrapper .container .col .card-link .card .card-body {
+            display: flex;
+            flex-direction: column;
+            align-items: center; } }
 
 /*# sourceMappingURL=main.css.map */
